Removed SshKeyShort from Swagger (instead a dataclass now); Tested version that properly adds/deletes keys in COmanage; schema change to FabricPerson and DbSshKeys to replace TIMESTAMP with DateTime(timezone=True)
