# server/swagger_server/models/__init__.py
@@ -12,7 +12,6 @@ from swagger_server.models.preferences import Preferences
 from swagger_server.models.ssh_key_bastion import SshKeyBastion
 from swagger_server.models.ssh_key_long import SshKeyLong
 from swagger_server.models.ssh_key_pair import SshKeyPair
-from swagger_server.models.ssh_key_short import SshKeyShort
 from swagger_server.models.ssh_key_status import SshKeyStatus
 from swagger_server.models.ssh_key_type import SshKeyType
 from swagger_server.models.version import Version
